objects/Channel_Partner_Account_Sharing_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only Access</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read and Write Access</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Partner Account Sharing Junction</relationshipLabel>
        <relationshipName>Channel_Partner_Account_Sharing_Junction</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Partner Account Sharing Junction (Partner Account)</relationshipLabel>
        <relationshipName>Channel_Partner_Account_Sharing_Junctio1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Channel Partner Account Sharing Junction</label>
    <nameField>
        <displayFormat>CPJ_{000000}</displayFormat>
        <label>Channel Partner Account Sharing Junction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partner Account Sharing Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>